--- a/python/getting_started/L0_Exploring_Llama_Stack.ipynb
+++ b/python/getting_started/L0_Exploring_Llama_Stack.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM6XZWU7Hqc1DQNzIHkJa2R",
+      "authorship_tag": "ABX9TyMSrsl5zk8KBvgGA1IlId4u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step1: install llama-stack"
+        "# A Gentle Intro to LLama Stack"
+      ],
+      "metadata": {
+        "id": "GPGzaVB43bMx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Step1: install llama-stack"
       ],
       "metadata": {
         "id": "02ul6mkwVwul"
@@ -40,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -66,7 +75,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 2: build llama-stack"
+        "## Step 2: build llama-stack"
       ],
       "metadata": {
         "id": "Cq0OnnOcV4Ds"
@@ -85,7 +94,7 @@
         "id": "vUQqenT_BeIp",
         "outputId": "fe57797c-f6c9-4480-a988-9d1df7a9e20d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +112,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Optional: print the list of models"
+        "## Optional: print the list of models"
       ],
       "metadata": {
         "id": "X7vnieVqV72V"
@@ -122,7 +131,7 @@
         "id": "6dCEc9sZD6xK",
         "outputId": "d9ff5b25-5e30-448e-c9c7-40225d299af5"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +205,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Optional: explore the llama CLI"
+        "## Optional: explore the llama CLI"
       ],
       "metadata": {
         "id": "IYhCCopwWB70"
@@ -215,7 +224,7 @@
         "id": "EWDhM6l9EAG0",
         "outputId": "c31678f9-4dfe-4c31-8249-b524315fd60c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,7 +263,7 @@
         "id": "mq2flj5_EJnH",
         "outputId": "b7af8582-9105-4836-da68-533cf764df40"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,11 +296,22 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 4: download Llama3.2-1B-Instruct"
+        "## Step 4: download Llama3.2-1B-Instruct"
       ],
       "metadata": {
         "id": "WGXMGBHCWa-y"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "INFERENCE_MODEL = \"Llama3.2-1B-Instruct\""
+      ],
+      "metadata": {
+        "id": "xO9lvP7f2Wr3"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -309,7 +329,7 @@
         "id": "qwUWzgKeEPgr",
         "outputId": "cc1ae6ea-9390-46f3-c6c2-6ab993d34d03"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -331,7 +351,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 5: download the run config"
+        "## Step 5: download the run config"
       ],
       "metadata": {
         "id": "svqh9q58WjYi"
@@ -353,7 +373,7 @@
         "id": "n4n01kzCJAJH",
         "outputId": "1ab45acb-45a7-408f-9e8e-a457d7a5806b"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -388,7 +408,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Step 6: use Llama Stack as a library"
+        "## Step 6: use Llama Stack as a library"
       ],
       "metadata": {
         "id": "8m6oQkRoWpbp"
@@ -406,7 +426,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## import the client"
+        "### import the client"
       ],
       "metadata": {
         "id": "X9jnl1gtW1xB"
@@ -420,13 +440,13 @@
       "metadata": {
         "id": "R2aaPRt8CIVu"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## initialize the client"
+        "### initialize the client"
       ],
       "metadata": {
         "id": "Zqq4o-pRW5f-"
@@ -435,9 +455,18 @@
     {
       "cell_type": "code",
       "source": [
-        "client = LlamaStackAsLibraryClient(\n",
-        "    \"distributions/meta-reference-gpu/run.yaml\",\n",
-        ")\n",
+        "CLIENT_TEMPLATE = \"distributions/meta-reference-gpu/run.yaml\""
+      ],
+      "metadata": {
+        "id": "A2708fCs25yJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "client = LlamaStackAsLibraryClient(CLIENT_TEMPLATE)\n",
         "client.initialize()"
       ],
       "metadata": {
@@ -448,7 +477,7 @@
         "id": "CzimHzlwCTkx",
         "outputId": "3ef02936-64d5-4b84-ce91-d120f127082e"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -792,7 +821,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## optional: test the client"
+        "### optional: test the client"
       ],
       "metadata": {
         "id": "X1TkiBssW9mF"
@@ -813,7 +842,7 @@
         "id": "I7PLynxwRQ9O",
         "outputId": "529bb1e6-40e7-45e1-bd16-af02e0160879"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -828,7 +857,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## use chat completion"
+        "### use chat completion"
       ],
       "metadata": {
         "id": "ZeyfPXBqXBuB"
@@ -842,7 +871,7 @@
         "        {\"role\": \"system\", \"content\": \"You are a friendly assistant.\"},\n",
         "        {\"role\": \"user\", \"content\": \"Write a two-sentence poem about llama.\"}\n",
         "    ],\n",
-        "    model_id=\"Llama3.2-1B-Instruct\",\n",
+        "    model_id=INFERENCE_MODEL,\n",
         ")\n",
         "\n",
         "print(response.completion_message.content)"
@@ -854,7 +883,7 @@
         "id": "3jE09psXRp77",
         "outputId": "0abf09d9-c92c-43ff-970d-758790462e9d"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -867,6 +896,206 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Your First RAG Agent"
+      ],
+      "metadata": {
+        "id": "MgiK2_X-1ffE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "see: https://llama-stack.readthedocs.io/en/latest/getting_started/index.html#your-first-rag-agent"
+      ],
+      "metadata": {
+        "id": "3IQOGBts1mMZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import os\n",
+        "import uuid\n",
+        "from termcolor import cprint\n",
+        "\n",
+        "from llama_stack_client.lib.agents.agent import Agent\n",
+        "from llama_stack_client.lib.agents.event_logger import EventLogger\n",
+        "from llama_stack_client.types import Document"
+      ],
+      "metadata": {
+        "id": "2CyCRObj1wtZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def create_library_client(template: str):\n",
+        "    from llama_stack import LlamaStackAsLibraryClient\n",
+        "\n",
+        "    client = LlamaStackAsLibraryClient(template)\n",
+        "    client.initialize()\n",
+        "    return client"
+      ],
+      "metadata": {
+        "id": "2mEafhfa1yEc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "client = (create_library_client(CLIENT_TEMPLATE))  # or create_http_client() depending on the environment you picked"
+      ],
+      "metadata": {
+        "id": "h9vN0Ma210Nd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Documents to be used for RAG\n",
+        "urls = [\"chat.rst\", \"llama3.rst\", \"memory_optimizations.rst\", \"lora_finetune.rst\"]\n",
+        "documents = [\n",
+        "    Document(\n",
+        "        document_id=f\"num-{i}\",\n",
+        "        content=f\"https://raw.githubusercontent.com/pytorch/torchtune/main/docs/source/tutorials/{url}\",\n",
+        "        mime_type=\"text/plain\",\n",
+        "        metadata={},\n",
+        "    )\n",
+        "    for i, url in enumerate(urls)\n",
+        "]"
+      ],
+      "metadata": {
+        "id": "oXtZBDJ111yQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "vector_providers = [\n",
+        "    provider for provider in client.providers.list() if provider.api == \"vector_io\"\n",
+        "]\n",
+        "provider_id = vector_providers[0].provider_id  # Use the first available vector provider"
+      ],
+      "metadata": {
+        "id": "fi0bDz6h131c"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Register a vector database\n",
+        "vector_db_id = f\"test-vector-db-{uuid.uuid4().hex}\"\n",
+        "client.vector_dbs.register(\n",
+        "    vector_db_id=vector_db_id,\n",
+        "    provider_id=provider_id,\n",
+        "    embedding_model=\"all-MiniLM-L6-v2\",\n",
+        "    embedding_dimension=384,\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "OTbrt1AG16jg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Insert the documents into the vector database\n",
+        "client.tool_runtime.rag_tool.insert(\n",
+        "    documents=documents,\n",
+        "    vector_db_id=vector_db_id,\n",
+        "    chunk_size_in_tokens=512,\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "atZ_bsEq17vU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rag_agent = Agent(\n",
+        "    client,\n",
+        "    model=INFERENCE_MODEL,\n",
+        "    # Define instructions for the agent ( aka system prompt)\n",
+        "    instructions=\"You are a helpful assistant\",\n",
+        "    enable_session_persistence=False,\n",
+        "    # Define tools available to the agent\n",
+        "    tools=[\n",
+        "        {\n",
+        "            \"name\": \"builtin::rag/knowledge_search\",\n",
+        "            \"args\": {\n",
+        "                \"vector_db_ids\": [vector_db_id],\n",
+        "            },\n",
+        "        }\n",
+        "    ],\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "wId610lW19OR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "session_id = rag_agent.create_session(\"test-session\")"
+      ],
+      "metadata": {
+        "id": "uyLoe1vZ1_yu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "user_prompts = [\n",
+        "    \"How to optimize memory usage in torchtune? use the knowledge_search tool to get information.\",\n",
+        "]"
+      ],
+      "metadata": {
+        "id": "KrLRk-Ly2BKr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Run the agent loop by calling the `create_turn` method\n",
+        "for prompt in user_prompts:\n",
+        "    cprint(f\"User> {prompt}\", \"green\")\n",
+        "    response = rag_agent.create_turn(\n",
+        "        messages=[{\"role\": \"user\", \"content\": prompt}],\n",
+        "        session_id=session_id,\n",
+        "    )\n",
+        "    for log in EventLogger().log(response):\n",
+        "        log.print()"
+      ],
+      "metadata": {
+        "id": "obR9ubeN1e9d"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
